# Whisperer

./: .gitignore  CMakeLists.txt  README.md
src/: file_input_device.cpp  file_input_device.hpp  lingva_api.cpp  lingva_api.hpp  linux_listener.cpp  linux_listener.hpp  linux_popup.cpp  linux_popup.hpp  listener.hpp  main.cpp  popup.hpp  translation_api.hpp  translator.cpp  translator.hpp  whisperer.cpp  whisperer.hpp  windows_api.cpp  windows_clipboard_reader.hpp  windows_listener.cpp  windows_listener.hpp  windows_popup.cpp  windows_popup.hpp  wl_clipboard_reader.cpp  wl_clipboard_reader.hpp
src/core/: clipboard_reader.hpp  lingva_api.cpp  lingva_api.hpp  listener.hpp  popup.hpp  translation_api.hpp  translator.cpp  translator.hpp  whisperer.cpp  whisperer.hpp
src/platform/linux/: input_device.hpp  linux_listener.cpp  linux_listener.hpp  linux_popup.cpp  linux_popup.hpp  wl_clipboard_reader.cpp  wl_clipboard_reader.hpp
src/platform/windows/: windows_api.hpp  windows_clipboard_reader.cpp  windows_clipboard_reader.hpp  windows_listener.cpp  windows_listener.hpp  windows_popup.cpp  windows_popup.hpp
tests/: linux_listener_ut.cpp  listener_ut.cpp  main-ut.cpp  translator_ut.cpp  windows_listener_ut.cpp
